--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@appnest/masonry-layout": "^2.2.3",
     "@astrojs/tailwind": "^5.1.4",
     "astro": "^5.1.7",
+    "photoswipe": "^5.4.4",
     "tailwindcss": "^3.4.17"
   },
   "packageManager": "pnpm@9.15.0+sha512.76e2379760a4328ec4415815bcd6628dee727af3779aaa4c914e3944156c4299921a89f976381ee107d41f12cfa4b66681ca9c718f0668fa0831ed4c6d8ba56c"
